<resources xmlns:color="http://schemas.android.com/tools">
    <string name="app_name">I F</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Market</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_notifications">Notifs</string>
    <string name="title_postad">Post</string>
    <string name="title_profile">Profile</string>
    <string name="Sign_up_with_underline"><u>Sign up</u></string>
    <string name="Sign_up_text">Sign up</string>
    <string name="Sign_in_text"><u>Sign in</u></string>
    <string name="Product_name">IF</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_Email">Email</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="password_sent">Password sent to the email address.</string>
    <string name="error_enter_email">Please enter a valid email</string>
    <string name="txt_password">Password</string>
    <string name="searchview_hint">Enter product, locality or person</string>
    <string name="txt_noWishes">No Wishes</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="Allow_number_on_bid_text">Allow seller to contact you</string>
    <string name="Allow_number_on_post_text">Allow others to contact you</string>
    <string name="txt_already_have_account">Already Have an account?</string>
    <string name="txt_tag_line">S I M P L E . \u0020 \u0020 C O N V E N I E N T .</string>
    <string name="txt_tag_line_2"> CONVENIENT</string>
    <string name="title_activity_testactivity">Testactivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="sold_text"><b>SOLD</b></string>
    <string name="bids_text"><b>BIDS</b></string>
    <string name="Report_result">Report submitted.</string>
    <string name="Report_reason">\u0002 Please enter detailed reason for report here</string>
    <string name="submitbutton_text">SUBMIT</string>
    <string name="cancelbutton_text">CANCEL</string>
    <string name="txt_Rating">Rating</string>
    <string name="txt_userfeedback">User Feedback</string>
    <string name="txt_out_of_five">/5</string>
    <string name="txt_remove_profile_picture">Remove profile picture</string>
    <string name="enter_bid_amount">Enter bid amount</string>
    <string name="bid_result">bid placed</string>
    <string name="error_report">*Please enter a reason.</string>
    <string name="error_bid">* Please enter bid amount.</string>
    <string name="choose_image_source_title">Select a source</string>
    <string name="IF_Hdeading">I F</string>
    <string name="txt_New">New</string>
    <string name="txt_all_categories">All categories</string>
    <string name="txt_no_filter">No filter</string>
    <string name="txt_Used">Used</string>
    <string name="txt_most_demand">Most demanded</string>
    <string name="Title_txt_settings">Settings</string>
    <string name="Title_txt_Categories">Categories</string>
    <string name="Title_txt_Filters">Filters</string>
    <string name="Title_txt_Help">Help</string>
    <string name="Title_txt_about_us">About us</string>
    <string name="Titlte_txt_FAQs">FAQs</string>
    <string name="Title_txt_terms_and_conditions">Terms and Conditions</string>
    <string name="Title_txt_privacy_policy">Privacy Policy</string>
    <string name="Title_txt_contactus">Contact us</string>
    <string name="Title_txt_logout">Logout</string>
    <string name="Privacy_Policy_text1">Openogy built the IF app as a Freemium app. This SERVICE is provided by Openogy at no cost and is intended for use as is.</string>
    <string name="Privacy_Policy_text2">This page is used to inform visitors regarding our policies with the collection, use,
        and disclosure of Personal Information if anyone decided to use our Service.
 </string>
    <string name="Privacy_Policy_text3">If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.
        The Personal Information that we collect is used for providing and improving the Service.
        We will not use or share your information with anyone except as described in this Privacy Policy.</string>
    <string name="Privacy_Policy_text4">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
        which is accessible at IF unless otherwise defined in this Privacy Policy.
 </string>
    <string name="Privacy_Policy_text5">Information Collection and Use</string>
    <string name="Privacy_Policy_text6">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information,
        including but not limited to Full Name, Mobile Number, Email, City. The information that we request will be retained by us and used as described in this privacy policy.</string>
    <string name="Privacy_Policy_text7">Log Data</string>
    <string name="Privacy_Policy_text8">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information
        (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
        device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="Privacy_Policy_text9">Cookies</string>
    <string name="Privacy_Policy_text10">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
        These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.</string>
    <string name="Privacy_Policy_text11">This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies”
        to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.
        If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="Privacy_Policy_text12">Service Providers</string>
    <string name="Privacy_Policy_text13">We may employ third-party companies and individuals due to the following reasons:</string>
    <string name="Privacy_Policy_text14">- To facilitate our Service,</string>
    <string name="Privacy_Policy_text15">- To provide the Service on our behalf,</string>
    <string name="Privacy_Policy_text16">- To perform Service-related services, or </string>
    <string name="Privacy_Policy_text17">- To assist us in analyzing how our Service is used.</string>
    <string name="Privacy_Policy_text18">We want to inform users of this Service that these third parties have access to your Personal Information.
        The reason is to perform the tasks assigned to them on our behalf.
        However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="Privacy_Policy_text19">Security</string>
    <string name="Privacy_Policy_text20">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
        But remember that no method of transmission over the internet,
        or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="Privacy_Policy_text21">Links to Other Sites</string>
    <string name="Privacy_Policy_text22">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site.
        Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites.
        We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="Privacy_Policy_text23">Children\'s Privacy</string>
    <string name="Privacy_Policy_text24">These Services do not address anyone under the age of 18. We do not knowingly collect personally identifiable information from children under 18.
        In the case we discover that a child under 18 has provided us with personal information, we immediately delete this from our servers.
        If you are a parent or guardian and you are aware that your child has provided us with personal information,
        please contact us so that we will be able to do necessary actions.</string>
    <string name="Privacy_Policy_text25">Changes to This Privacy Policy</string>
    <string name="Privacy_Policy_text26">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.
        We will notify you of any changes by posting the new Privacy Policy on this page.
        These changes are effective immediately after they are posted on this page.</string>
    <string name="Privacy_Policy_text27">Contact Us</string>
    <string name="Privacy_Policy_text28">If you have any questions or suggestions about our Privacy Policy, do not hesitate to write us at ifadvertisings@gmail.com.</string>
    <string name="faq_text2">How does the bidding mechanism work ?</string>
    <string name="faq_text3">Once a user makes a bid on a listing/ad the user who posted gets a notification concerning it. After that it is upto the user
and the seller how they decide to take the deal forward.</string>
    <string name="faq_text4">Is there any exchange of money involved ?</string>
    <string name="faq_text5">No there is no exchange of money involved through the application. The application through its bidding mechanism just
   aggregates bids from user for a particular listing.</string>
    <string name="faq_text6">When does the vendor get a notification for a listing ?</string>
    <string name="faq_text7">- For the first bid on a listing/ad.</string>
    <string name="faq_text8">- After that everytime the new bid is higher than the highest bid on a listing/ad.</string>
    <string name="faq_text9">- Everytime a user makes a demand for the listing by clicking on the demand button.</string>
    <string name="faq_text10">- Everytime a comment is made on a listing.</string>
    <string name="faq_text11">What is the WishList ?</string>
    <string name="faq_text12">Using the wishlist you can make a Wish for whatever you are looking for in your city.</string>
    <string name="faq_text13">When does the user get a notification for a Wish ?</string>
    <string name="faq_text14">- Everytime a user clicks on the Fulfill button of a Wish.</string>
    <string name="faq_text16">- Everytime a a comment is made on a Wish.</string>
    <string name="faq_text15">How to earn a badge?</string>
    <string name="faq_text1">There are 4 badges i.e. Bronze, Silver, Gold and Elite.
        Users will only be able to earn the badge according to our internal set of rules and criteria set by us. By Default, no one gets a badge (i.e. none).</string>
    <string name="faq_text17">What does the bid button do ?</string>
    <string name="faq_text18">Using the bid button the user can make a bid on a listing/ad. Everytime a bid is made the user is also
presented with a checkbox using which he can choose whether the seller can contact him using his contact number or not concerning
that particular bid.</string>
    <string name="faq_text19">What does the Fulfill button do ?</string>
    <string name="faq_text20">For a partiular Wish when a user clicks on the Fulfill button he intends to fulfill that Wish. Once he clicks on the Fulfill button
his contact number is also shared with the person on whose Wish he has clicked Fulfill.</string>
</resources>