<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_icon_menu">
    <item
        android:id="@+id/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/Title_txt_settings">
        <menu>
            <item
                android:id="@+id/action_category"
                app:showAsAction="always"
                android:title="@string/Title_txt_Categories">
                <menu>
                    <item
                        android:id="@+id/action_all_categories"
                        app:showAsAction="ifRoom"
                        android:title="@string/txt_all_categories">
                    </item>

                </menu>
            </item>
            <item
                android:id="@+id/action_Filter"
                app:showAsAction="always"
                android:title="@string/Title_txt_Filters"
                >
                <menu>
                    <item
                        android:id="@+id/action_no_filter"
                        app:showAsAction="ifRoom"
                        android:title="@string/txt_no_filter">
                    </item>
                    <item
                        android:id="@+id/action_new_item"
                        app:showAsAction="ifRoom"
                        android:title="@string/txt_New">
                    </item>
                    <item
                        android:id="@+id/action_used_item"
                        app:showAsAction="ifRoom"
                        android:title="@string/txt_Used">
                    </item>
                    <item
                        android:id="@+id/action_most_demanded"
                        app:showAsAction="ifRoom"
                        android:title="@string/txt_most_demand">
                    </item>
                </menu>
            </item>
            <item
                android:id="@+id/action_help"
                app:showAsAction="always"
                android:title="@string/Title_txt_Help">
                <menu>
                <item
                    android:id="@+id/action_about_us"
                    app:showAsAction="ifRoom"
                    android:title="@string/Title_txt_about_us">
                </item>
                <item
                    android:id="@+id/action_faqs"
                    app:showAsAction="ifRoom"
                    android:title="@string/Titlte_txt_FAQs">
                </item>


                <item
                    android:id="@+id/action_privacy_policy"
                    app:showAsAction="ifRoom"
                    android:title="@string/Title_txt_privacy_policy">
                </item>

            <item
                android:id="@+id/action_tnc"
                app:showAsAction="ifRoom"
                android:title="@string/Title_txt_terms_and_conditions">
            </item>
                <item
                    android:id="@+id/action_contact_us"
                    app:showAsAction="ifRoom"
                    android:title="@string/Title_txt_contactus">
                </item>
                </menu>
            </item>
            <item
                android:id="@+id/action_logout"
                app:showAsAction="ifRoom"
                android:title="@string/Title_txt_logout">
            </item>

        </menu>
    </item>

</menu>