<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".privacy_policy_activity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center_vertical|start"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IF_Hdeading"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="25dp"
            android:fontFamily="@font/montserrat"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title_txt_privacy_policy"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text1"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text2"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text3"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text4"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text5"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text6"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text7"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text8"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text9"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text10"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text11"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text12"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text13"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text14"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text15"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text16"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text17"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text18"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text19"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text20"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text21"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text22"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text23"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text24"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text25"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text26"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"
            android:paddingBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text27"
            android:textSize="12sp"
            android:textColor="#000000"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy_Policy_text28"
            android:textSize="12sp"
            android:fontFamily="@font/nunito_sans"/>

    </LinearLayout>

</ScrollView>
</LinearLayout>