<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faqs_activity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center_vertical|start"
        android:theme="@style/ToolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IF_Hdeading"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="25dp"
            android:fontFamily="@font/montserrat"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titlte_txt_FAQs"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text2"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text3"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text4"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text5"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text6"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text7"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text8"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text9"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text10"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text11"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text12"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text13"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text16"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text14"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text15"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text1"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text17"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text18"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text19"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/montserrat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text20"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:paddingBottom="8dp"/>


        </LinearLayout>

    </ScrollView>
</LinearLayout>